# OpenGlFractals

./: README.md
Mandelbrot`s fractal/: CMakeLists.txt  main.cpp  shader.cpp
Mandelbrot`s fractal/include/: shader.hpp
Mandelbrot`s fractal/shader/: fShader.frag  vShader.vert
